--- a/src/app/pages/indicator/scanresult/scanresult.component.scss
+++ b/src/app/pages/indicator/scanresult/scanresult.component.scss
@@ -3,7 +3,7 @@
 }
 .indicatorContent{
   background-color: rgba(242, 242, 242, 0.7);
-  border: .25rem dashed #C6C6C5;
+  //border: .25rem dashed #C6C6C5;
 }
 .warning{
   position: relative;
