--- a/src/app/pages/indicator/selectdocument/selectdocument.component.scss
+++ b/src/app/pages/indicator/selectdocument/selectdocument.component.scss
@@ -22,8 +22,8 @@
     left: 0rem;
     height: 20rem;
     max-width: 61.5rem;
-    border: .25rem dashed #C6C6C5;
-    background-color: rgba(242, 242, 242, 0.7);
+    //border: .25rem dashed #C6C6C5;
+    //background-color: rgba(242, 242, 242, 0.7);
 }
 
 //TODO: ng-deep is depecrated http://angular.io/guide/component-styles#deprecated-deep--and-ng-deep
