--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @font-face {
-  font-family: "Montserrat";
+  font-family: "Montserrat, sans-serif";
   src: url('./assets/Montserrat/Montserrat-Regular.ttf');
 }
 
