--- a/src/app/dialog/dialog.component.css
+++ b/src/app/dialog/dialog.component.css
@@ -143,11 +143,11 @@ color: #453457;
   padding-bottom: 0px;
 }   */
 .dialog__lower-close-btn {
-  position: absolute;
-  width: 90px;
+  position: relative;
+  width: 120px;
   height: 30px;
-  right: 25rem;
-  top: calc(50% - 30px/2 + 222px);
+  left: 21rem;
+  top: .7rem;
   background: #453457;
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
