--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -80,7 +80,7 @@
       <thead (nzSortOrderChange)="sort($event)">
         <!--TODO nzSingleSort-->
         <tr>
-          <th nzWidth="60px"></th>
+          <th nzWidth="3%"></th>
           <th
             nzShowCheckbox
             [(nzChecked)]="isAllDisplayDataChecked"
@@ -94,27 +94,27 @@
             nz-popover
             nzPopoverTitle="Level"
             nzPopoverContent="These are the levels of the indicators."
-            nzWidth="10%"
+            nzWidth="7%"
             nzShowFilter
             [nzFilters]="searchFilter.level"
             [nzFilterFn]="filterLevel"
           >
-            Level
+          <img src="..\..\..\..\assets\level.svg" alt="level" height="40" width="40">
           </th>
           <th
-          nzWidth="30%"
+          nzWidth="200px"
             nz-popover
             nzPopoverTitle="Indicator"
             nzPopoverContent="The phrasing of the actual indicator. Some indicators may need to be further specified accordingly."
             style="font-weight: bold;"
           >
-            Indicator
+          <img src="..\..\..\..\assets\indicator.svg" alt="Indicator" height="40" width="40">
           </th>
 
           <th
             nzShowSort
             nzColumnKey="source"
-            nzWidth="10%"
+            nzWidth="7%"
             nz-popover
             nzPopoverTitle="Source"
             nzPopoverContent="Where the indicator comes from. Who has developed it."
@@ -122,7 +122,7 @@
             [nzFilters]="searchFilter.source"
             [nzFilterFn]="filterSource"
           >
-            Source
+          <img src="..\..\..\..\assets\source.svg" alt="source" height="40" width="40">
           </th>
           <th
             nzShowSort
@@ -130,19 +130,19 @@
             nz-popover
             nzPopoverTitle="Disaggregation"
             nzPopoverContent="If the indicator requires disaggregation. As a rule of thumb, whenever people are counted, there should a disaggregation (at least by sex)."
-            nzWidth="15%"
+            nzWidth="7%"
             style="font-size: 10px;"
             nzBreakWord
             nzShowFilter
             [nzFilters]="searchFilter.disaggregation"
             [nzFilterFn]="filterDisag"
           >
-            Disaggregation
+          <img src="..\..\..\..\assets\Disaggregation.svg" alt="Disaggregation" height="40" width="40">
           </th>
           <th
             nzShowSort
             nzColumnKey="sector"
-            nzWidth="15%"
+            nzWidth="7%"
             nz-popover
             nzPopoverTitle="Thematic Area"
             nzPopoverContent="The sectors where the indicator is related to."
@@ -151,7 +151,7 @@
             [nzFilters]="searchFilter.sector"
             [nzFilterFn]="filterSector"
           >
-            Thematic<br>Area
+          <img src="..\..\..\..\assets\Thematic Area.svg" alt="Thematic Area" height="40" width="40">
           </th>
           <th
             nzShowSort
@@ -159,13 +159,13 @@
             nz-popover
             nzPopoverTitle="OECD DAC/CRD Code"
             nzPopoverContent="This is the three digit code referring to the CRS codes, another way to understand what the indicator is related to."
-            nzWidth="15%"
+            nzWidth="7%"
             nzBreakWord
             nzShowFilter
             [nzFilters]="searchFilter.crsCode"
             [nzFilterFn]="filterCRSCode"
           >
-            OECD<br>DAC/CRS<br>Code
+            <img src="..\..\..\..\assets\OECD DACCRS Code.svg" alt="OECD DACCRS Code" height="40" width="40">
           </th>
           <th
             nzShowSort
@@ -174,21 +174,21 @@
             nz-popover
             nzPopoverTitle="SDG Code"
             nzPopoverContent="This is in relations to the 17 SDGs."
-            nzWidth="15%"
+            nzWidth="7%"
             nzShowFilter
             [nzFilters]="searchFilter.sdgCode"
             [nzFilterFn]="filterSDGCode"
           >
-            SDG<br>Code
+          <img src="..\..\..\..\assets\SDG Code.svg" alt="SdgCode" height="40" width="40">
           </th>
           <th
             nz-popover
             nzPopoverTitle="Keyword frequency"
             nzPopoverContent="The number of times the document triggers the keywords of each indicator. Ideally you do not want to use indicators with a keyword frequency of less than 10."
-            nzWidth="10%"
             *ngIf="showKeywordCol"
+            nzWidth="7%"
           >
-            Keyword Frequency
+          <img src="..\..\..\..\assets\Keyword Frequency.svg" alt="SdgCode" height="40" width="40">
             <nz-slider
               (nzOnAfterChange)="onAfterChange($event)"
               [nzTooltipVisible]="'default'"
