--- a/src/app/dialog/dialog.component.css
+++ b/src/app/dialog/dialog.component.css
@@ -57,6 +57,7 @@
 @media (min-width: 768px) {
   .dialog {
     top: 40px;
+    align-items: center;
   }
 }
 .dialog__close-btn {
@@ -146,7 +147,6 @@ color: #453457;
   position: relative;
   width: 120px;
   height: 30px;
-  left: 21rem;
   top: .7rem;
   background: #453457;
   border: 1px solid #FFFFFF;
