--- a/src/app/pages/indicator/scanresult/scanresult.component.scss
+++ b/src/app/pages/indicator/scanresult/scanresult.component.scss
@@ -10,3 +10,79 @@
   width: 100%;
   z-index: 100;
 }
+.ant-table-thead tr th.ant-table-column-has-sorters .ant-table-filter-column-title {
+  padding: 0;
+}
+::ng-deep.ant-table-column-sorter-full {
+  margin-left: 1rem;
+}
+::ng-deep.ant-table-column-sorters {
+  display: block;
+}
+::ng-deep.ant-table-filter-trigger {
+  width: 2em;
+
+}
+// ::ng-deep.ant-table-column-sorter {
+//   margin-left: 18px;
+// }
+/*
+::ng-deep {
+  @media only screen and (max-width: 1300px) {
+// Force table to not be like tables anymore
+table, tbody, th, td, tr { //thead, removed
+  display: block; 
+}
+
+// Hide table headers (but not display: none;, for accessibility)
+thead tr { 
+background-color: red;
+}
+
+tr { border: 1px solid #ccc; }
+
+td { 
+  //Behave  like a "row" 
+  border: none;
+  border-bottom: 1px solid #eee; 
+  position: relative;
+  padding-left: 50%; 
+  text-align-last: left;
+}
+
+td:before { 
+  // Now like a table header 
+  // Top/left values mimic padding 
+  top: 6px;
+  left: 6px;
+  width: 45%; 
+  padding-right: 10px; 
+  white-space: nowrap;
+}
+
+//Label the data
+td:nth-of-type(1):before { content: "Year filter:"; }
+td:nth-of-type(2):before { content: "Indicator Selection:"; }
+td:nth-of-type(3):before { content: "Level:"; }
+td:nth-of-type(4):before { content: "Indicator Information:"; }
+td:nth-of-type(5):before { content: "Source:"; }
+td:nth-of-type(6):before { content: "Disaggregation:"; }
+td:nth-of-type(7):before { content: "Thematic Area:"; }
+td:nth-of-type(8):before { content: "OECD DAC/CRS Code:"; }
+td:nth-of-type(9):before { content: "SDG Code:"; }
+
+
+//Year filter will cause table to expand, margin set to 0
+.ant-table.ant-table-bordered.ant-table-middle .ant-table-expanded-row-fixed {
+  margin: -16px -16px;
+}
+  
+.ant-table-thead > tr > th {
+  display: table-cell;
+}
+.ant-table table {
+display: grid;
+}
+  }
+}
+*/
