--- a/src/app/pages/indicator/visualisationresult/visualisationresult.component.html
+++ b/src/app/pages/indicator/visualisationresult/visualisationresult.component.html
@@ -1,7 +1,12 @@
 <div style="min-height: 300px;" [ngClass]="{'fullscreen':isFullscreen, 'smallscreen':!isFullscreen}">
   <!-- <img style="margin-top: 50px;" src="assets/waiting2.png" />
   <h3 style="margin-top: 20px;">COMING SOON</h3> -->
-  <div id="toolbar" class="steps-action"><button (click)="isFullscreen = !isFullscreen"
+  <div id="toolbar" class="steps-action">
+    <nz-select id="chartSelect" nzPlaceHolder="Select" [(ngModel)]="selectedChartName" (ngModelChange)="changeChart($event)">
+      <nz-option nzLabel="Result" nzValue="result"></nz-option>
+      <nz-option nzLabel="Indicator" nzValue="indicator"></nz-option>
+    </nz-select>
+      <button (click)="isFullscreen = !isFullscreen"
       class='steps-button ant-btn toolbar-btn fullscreen-btn'><i nz-icon style="font-size: 18px;"
         [nzType]="isFullscreen?'fullscreen-exit':'fullscreen'" nzTheme="outline"></i></button>
         <button class='steps-button ant-btn toolbar-btn undo'>Undo</button>
@@ -11,7 +16,7 @@
   <div class="row">
     <div class="draw2d" [style.height]="height">
       <div onselectstart="javascript:/*IE8 hack*/return false" id="gfx_holder"
-        style="width:1500px; position: absolute;left: 0;" [style.height]="canvasHeight"></div>
+        style="width:2100px; position: absolute;left: 0;" [style.height]="canvasHeight"></div>
     </div>
   </div>
 </div>
