--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -127,3 +127,11 @@
     <i nz-icon nzType="loading"></i>
   </div>
 </ng-template>
+<a href="https://feedback.logframelab.ai" target="_blank">
+<button
+  nz-button
+  nzType="question"
+  class="feedbackIcon"
+>
+  Feedback
+</button></a>
