--- a/src/app/pages/indicator/indicator.component.scss
+++ b/src/app/pages/indicator/indicator.component.scss
@@ -302,3 +302,19 @@ background-color: #453457;
   box-shadow: .25rem .35rem .1625rem #00000029;
   max-width: 48rem;
   }*/
+
+.feedbackIcon {
+  display: flex;
+  position: absolute;
+  top: 20%;
+  right: 0;
+  background: #453457;
+  border-radius: 0.6rem 0 0 0.6rem;
+  font-size: 1rem;
+  font-weight: 700;
+  color: #ffffff;
+  align-items: center;
+  justify-content: center;
+  height: 3rem;
+  width: 7rem;
+}
