[#8ypuhb] - Expanding selection only open for the selected indicator

--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -122,7 +122,6 @@
     </button>
   </div>
 </div>
-<button id="uploadButton" nz-button nzType="primary" routerLink="/indicators-upload"><i nz-icon nzType="cloud-upload"></i>Submit Indicators</button>
 </nz-spin>
 <ng-template #indicatorTemplate>
   <div class="loading-row">
@@ -137,3 +136,4 @@
 >
   Feedback
 </button></a>
+<button id="uploadButton" nz-button nzType="question" routerLink="/indicators-upload"><i nz-icon nzType="cloud-upload"></i>Submit Indicators</button>
