--- a/src/styles.scss
+++ b/src/styles.scss
@@ -128,6 +128,9 @@ a:hover{
   color: white;
 }
 
+.ant-table-row-expand-icon {
+  color: black;
+}
 //login input (username and password input
 .ant-input-affix-wrapper-focused {
   border-color: #453457;
