columns deleted, renamed and copyright centered

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,7 +69,12 @@
           ></i>
         </a>
         <a
-          style="padding-left: 430px; line-height: 28px"
+          style="
+            margin: auto;
+            padding-right: 9%;
+            text-align: center;
+            line-height: 28px;
+          "
           href="http://arqaam.org"
           target="_blank"
         >
