--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -49,11 +49,11 @@
     >
     </nz-alert>
 
-    <div style="position: relative;">
+    <div style="position: relative">
       <input
         (input)="search(false)"
         nzSize="large"
-        style="padding-right: 30px;"
+        style="padding-right: 30px"
         type="text"
         nz-input
         placeholder="Search indicator"
@@ -75,14 +75,15 @@
       <thead (nzSortOrderChange)="sort($event, false)">
         <!--TODO nzSingleSort-->
         <tr>
-          <th nzWidth="60px"></th>
           <th
-            nzShowCheckbox
-            [(nzChecked)]="isAllDisplayDataChecked"
-            [nzIndeterminate]="isIndeterminate"
-            (nzCheckedChange)="checkAll($event)"
-            nzWidth="3%"
-          ></th>
+            nzWidth="80px"
+            nzColumnKey="baselinevalue"
+            nz-popover
+            nzPopoverTitle="Baseline Value"
+            nzPopoverContent="This is the baseline value."
+          >
+            Baseline Value
+          </th>
           <th
             nzShowSort
             nzColumnKey="level"
@@ -97,11 +98,11 @@
             Level
           </th>
           <th
-          nzWidth="30%"
+            nzWidth="30%"
             nz-popover
             nzPopoverTitle="Indicator"
             nzPopoverContent="The phrasing of the actual indicator. Some indicators may need to be further specified accordingly."
-            style="font-weight: bold;"
+            style="font-weight: bold"
           >
             Indicator
           </th>
@@ -126,7 +127,7 @@
             nzPopoverTitle="Disaggregation"
             nzPopoverContent="If the indicator requires disaggregation. As a rule of thumb, whenever people are counted, there should a disaggregation (at least by sex)."
             nzWidth="15%"
-            style="font-size: 10px;"
+            style="font-size: 10px"
             nzBreakWord
             nzShowFilter
             [nzFilters]="searchFilter.disaggregation"
@@ -146,7 +147,7 @@
             [nzFilters]="searchFilter.sector"
             [nzFilterFn]="filterSector"
           >
-            Thematic<br>Area
+            Thematic<br />Area
           </th>
           <th
             nzShowSort
@@ -159,7 +160,7 @@
             [nzFilters]="searchFilter.crsCode"
             [nzFilterFn]="filterCRSCode"
           >
-            OECD<br>DAC/CRS<br>Code
+            OECD<br />DAC/CRS<br />Code
           </th>
           <th
             nzShowSort
@@ -173,7 +174,7 @@
             [nzFilters]="searchFilter.sdgCode"
             [nzFilterFn]="filterSDGCode"
           >
-            SDG<br>Code
+            SDG<br />Code
           </th>
           <th
             nz-popover
@@ -200,12 +201,15 @@
             (click)="selectindicator(data.sort_id, data)"
             [class.row-checked]="mapOfCheckedId[data.sort_id]"
           >
-            <td [nzExpand]="expandSet.has(data.id)" (nzExpandChange)="onExpandChange(data.id, $event)"></td>
             <td
+              [nzExpand]="expandSet.has(data.id)"
+              (nzExpandChange)="onExpandChange(data.id, $event)"
+            ></td>
+            <!-- <td
               nzShowCheckbox
               [(nzChecked)]="mapOfCheckedId[data.sort_id]"
               (nzCheckedChange)="refreshStatus()"
-            ></td>
+            ></td> -->
             <td>
               <nz-tag [nzColor]="data.indicator.color"
                 >{{ data.indicator.level }}
@@ -213,18 +217,18 @@
             </td>
             <td nzBreakWord>{{ data.indicator.name }}</td>
             <td nzBreakWord>{{ printArray(data.indicator.source, 'name') }}</td>
-            <td style="text-align: center;">
-              <div style="text-align: center;">
+            <td style="text-align: center">
+              <div style="text-align: center">
                 <i
                   *ngIf="!data.indicator.disaggregation"
-                  style="font-size: 25px; color: rgb(216, 126, 126);"
+                  style="font-size: 25px; color: rgb(216, 126, 126)"
                   nz-icon
                   nzType="close"
                   nzTheme="outline"
                 ></i>
                 <i
                   *ngIf="data.indicator.disaggregation"
-                  style="font-size: 25px; color: #a5c2ae;"
+                  style="font-size: 25px; color: #a5c2ae"
                   nz-icon
                   nzType="check"
                   nzTheme="outline"
@@ -232,32 +236,58 @@
               </div>
             </td>
             <td nzBreakWord>{{ data.indicator.sector }}</td>
-            <td nzBreakWord>{{ printArray(data.indicator.crsCode, 'name') }}</td>
-            <td nzBreakWord title="{{printArray(data.indicator.sdgCode, 'name')}}" nzEllipsis>{{ printArray(data.indicator.sdgCode, 'name') }}</td>
+            <td nzBreakWord>
+              {{ printArray(data.indicator.crsCode, 'name') }}
+            </td>
+            <td
+              nzBreakWord
+              title="{{ printArray(data.indicator.sdgCode, 'name') }}"
+              nzEllipsis
+            >
+              {{ printArray(data.indicator.sdgCode, 'name') }}
+            </td>
             <td *ngIf="showKeywordCol">{{ data.indicator.numTimes }}</td>
           </tr>
           <tr [nzExpand]="expandSet.has(data.id)">
             <span>Country: </span>
-            <nz-select style="margin-left: 5px;" nzShowSearch nzAllowClear (ngModelChange)="ngModelCountryChange(data, $event)" nzPlaceHolder="Select a country" [(ngModel)]="data.countryCodeSelected">
-              <nz-option *ngFor="let country of countriesList" nzLabel="{{country.lable}}" nzValue="{{country.code}}"></nz-option>
+            <nz-select
+              style="margin-left: 5px"
+              nzShowSearch
+              nzAllowClear
+              (ngModelChange)="ngModelCountryChange(data, $event)"
+              nzPlaceHolder="Select a country"
+              [(ngModel)]="data.countryCodeSelected"
+            >
+              <nz-option
+                *ngFor="let country of countriesList"
+                nzLabel="{{ country.lable }}"
+                nzValue="{{ country.code }}"
+              ></nz-option>
             </nz-select>
-            <span style="margin-left: 5px;">Year: </span>
-            <nz-year-picker style="margin-left: 5px;" (ngModelChange)="ngModelYearChange(data, $event)" [nzDisabledDate]="disabledDate" [(ngModel)]="data.yearSelected" nzPlaceHolder="Select year"></nz-year-picker>
-            <span style="margin-left: 5px;">Baseline value: {{ data.baseLineValue }}</span>
+            <span style="margin-left: 5px">Year: </span>
+            <nz-year-picker
+              style="margin-left: 5px"
+              (ngModelChange)="ngModelYearChange(data, $event)"
+              [nzDisabledDate]="disabledDate"
+              [(ngModel)]="data.yearSelected"
+              nzPlaceHolder="Select year"
+            ></nz-year-picker>
+            <span style="margin-left: 5px"
+              >Baseline value: {{ data.baseLineValue }}</span
+            >
           </tr>
         </ng-template>
-
       </tbody>
     </nz-table>
   </div>
 
   <ng-template #contentTemplate>
     <div class="warning">
-      <div style="position: relative;">
+      <div style="position: relative">
         <input
           (input)="search(true)"
           nzSize="large"
-          style="padding-right: 30px;"
+          style="padding-right: 30px"
           type="text"
           nz-input
           placeholder="Search selected indicator"
@@ -292,7 +322,7 @@
               nz-popover
               nzPopoverTitle="Indicator"
               nzPopoverContent="The phrasing of the actual indicator. Some indicators may need to be further specified accordingly."
-              style="font-weight: bold;"
+              style="font-weight: bold"
             >
               Indicator
             </th>
@@ -317,7 +347,7 @@
               nzPopoverTitle="Disaggregation"
               nzPopoverContent="If the indicator requires disaggregation. As a rule of thumb, whenever people are counted, there should a disaggregation (at least by sex)."
               nzWidth="10%"
-              style="font-size: 10px;"
+              style="font-size: 10px"
               nzBreakWord
               nzShowFilter
               [nzFilters]="searchFilter.disaggregation"
@@ -384,7 +414,14 @@
                 [ngModel]="[10, sliderMaxValue]"
               ></nz-slider>
             </th>
-            <th><i nz-icon nzType="delete" nzTheme="outline" class="red-color"></i></th>
+            <th>
+              <i
+                nz-icon
+                nzType="delete"
+                nzTheme="outline"
+                class="red-color"
+              ></i>
+            </th>
           </tr>
         </thead>
         <tbody>
@@ -396,19 +433,21 @@
                 </nz-tag>
               </td>
               <td nzBreakWord>{{ data.indicator.name }}</td>
-              <td nzBreakWord>{{ printArray(data.indicator.source, 'name') }}</td>
-              <td style="text-align: center;">
-                <div style="text-align: center;">
+              <td nzBreakWord>
+                {{ printArray(data.indicator.source, 'name') }}
+              </td>
+              <td style="text-align: center">
+                <div style="text-align: center">
                   <i
                     *ngIf="!data.indicator.disaggregation"
-                    style="font-size: 25px; color: rgb(216, 126, 126);"
+                    style="font-size: 25px; color: rgb(216, 126, 126)"
                     nz-icon
                     nzType="close"
                     nzTheme="outline"
                   ></i>
                   <i
                     *ngIf="data.indicator.disaggregation"
-                    style="font-size: 25px; color: #a5c2ae;"
+                    style="font-size: 25px; color: #a5c2ae"
                     nz-icon
                     nzType="check"
                     nzTheme="outline"
@@ -416,26 +455,54 @@
                 </div>
               </td>
               <td nzBreakWord>{{ data.indicator.sector }}</td>
-              <td nzBreakWord>{{ printArray(data.indicator.crsCode, 'name') }}</td>
-              <td title="{{printArray(data.indicator.sdgCode, 'name')}}" nzBreakWord>{{ printArray(data.indicator.sdgCode, 'name') }}</td>
+              <td nzBreakWord>
+                {{ printArray(data.indicator.crsCode, 'name') }}
+              </td>
+              <td
+                title="{{ printArray(data.indicator.sdgCode, 'name') }}"
+                nzBreakWord
+              >
+                {{ printArray(data.indicator.sdgCode, 'name') }}
+              </td>
               <td *ngIf="showKeywordCol">{{ data.indicator.numTimes }}</td>
-              <td (click)="removeSelectedIndicator(data)"><i nz-icon nzType="delete" nzTheme="outline" class="red-color"></i></td>
-
+              <td (click)="removeSelectedIndicator(data)">
+                <i
+                  nz-icon
+                  nzType="delete"
+                  nzTheme="outline"
+                  class="red-color"
+                ></i>
+              </td>
             </tr>
           </ng-template>
         </tbody>
       </nz-table>
     </div>
-    </ng-template>
+  </ng-template>
 </div>
-<button nz-button nz-popover [nzPopoverContent]="contentTemplate" nzPopoverTrigger="click" *ngIf="this.selectedIndicators.length !=0" id="selectionButton">
-  <i nz-icon [nzType]="'check-circle'" [nzTheme]="'twotone'" [nzTwotoneColor]="'#52c41a'"></i>
+<button
+  nz-button
+  nz-popover
+  [nzPopoverContent]="contentTemplate"
+  nzPopoverTrigger="click"
+  *ngIf="this.selectedIndicators.length != 0"
+  id="selectionButton"
+>
+  <i
+    nz-icon
+    [nzType]="'check-circle'"
+    [nzTheme]="'twotone'"
+    [nzTwotoneColor]="'#52c41a'"
+  ></i>
   <nz-badge [nzCount]="impactCount" [nzStyle]="{ backgroundColor: 'purple' }">
   </nz-badge>
-  <nz-badge [nzCount]="outcomeCount" [nzStyle]="{ backgroundColor: 'red' }" >
+  <nz-badge [nzCount]="outcomeCount" [nzStyle]="{ backgroundColor: 'red' }">
   </nz-badge>
-  <nz-badge [nzCount]="outputCount"  [nzStyle]="{ backgroundColor: 'green' }">
+  <nz-badge [nzCount]="outputCount" [nzStyle]="{ backgroundColor: 'green' }">
   </nz-badge>
-  <nz-badge [nzCount]="selectedIndicators.length"  [nzStyle]="{ backgroundColor: 'black' }">
+  <nz-badge
+    [nzCount]="selectedIndicators.length"
+    [nzStyle]="{ backgroundColor: 'black' }"
+  >
   </nz-badge>
 </button>
