--- a/src/app/pages/indicator/indicator.component.scss
+++ b/src/app/pages/indicator/indicator.component.scss
@@ -2,7 +2,8 @@
   position: relative;
   max-width: 90rem;
   padding: 10px;
-  margin: 60px;
+  margin-right: 10rem;
+  margin-left:2rem;
   //width: 984px;
   //height: 56px;
   //left: 299px;
