--- a/src/app/pages/indicator/result/result.component.html
+++ b/src/app/pages/indicator/result/result.component.html
@@ -1,30 +1,8 @@
 <div class="content-panel">
-<nz-collapse>
-    <nz-collapse-panel *ngFor="let panel of indicatorService.collapseData; let i = index" [nzHeader]="extraTpl" [nzActive]="panel.active">
-
-      <!--<div nz-row *ngIf="i == 0">
-        <div nz-col class="collapse-title" [nzSpan]="11">{{panel.data[0].indicator.statement}}</div>
-        <div nz-col class="gutter-row" [nzSpan]="4">  <nz-tag [nzColor]="panel.data[0].indicator.statusColor"
-          >{{ panel.data[0].indicator.status }}
-        </nz-tag></div>
-        <div nz-col class="gutter-row" [nzSpan]="5">
-          <div nz-row>
-            <div nz-col class="gutter-row" [nzSpan]="18">
-              <nz-progress (click)="$event.stopPropagation()" [nzShowInfo]="false" [nzStatus]="panel.data[0].indicator.scoreType" [nzPercent]="panel.data[0].indicator.score"></nz-progress>
-            </div>
-            <div nz-col class="score-row" [nzSpan]="6">
-              {{panel.data[0].indicator.score}}%
-            </div>
-          </div>
-        </div>
-        <div nz-col class="gutter-row" [nzSpan]="4"><i nz-icon nzType="edit" class="edit-icon" (click)="$event.stopPropagation();edit(i, 0);" nzTheme="fill"></i>
-          <i nz-icon nzType="delete" class="delete-icon" (click)="$event.stopPropagation();showDeleteConfirm(i, 0);" nzTheme="fill"></i></div>
-      </div>-->
-   
       <nz-table
       #dynamicTable
-      [nzData]="panel.data"
-      [nzPageSize]="panel.data.length"
+      [nzData]="listOfData"
+      [nzPageSize]="listOfData.length"
       nzShowPagination="false"
       nzShowSizeChanger="false"
       nzSize="middle"
@@ -32,6 +10,12 @@
     >
       <thead>
         <tr>
+          <th
+            [nzFilters]="levelFilter"
+            [nzFilterFn]="filterLevel"
+            >
+            Level
+          </th>
           <th style="font-weight: bold;">
             Statement
           </th>
@@ -50,48 +34,51 @@
       <tbody>
         <ng-template ngFor let-data [ngForOf]="dynamicTable.data" let-index="index">
           <tr>
-            <td>{{ data.indicator.statement }}</td>
             <td>
-               <nz-tag [nzColor]="data.indicator.statusColor"
-              >{{ data.indicator.status }}
+              <div class="editable-cell" [hidden]="editId === data.id" (click)="startEdit(data.id)">
+                <nz-tag [nzColor]="data.colorLevel"
+                >{{ data.level }}
+              </nz-tag>
+              </div>
+              <nz-select id="level" name="level" [(ngModel)]="data.level" nzPlaceHolder="Level"
+              [hidden]="editId !== data.id">
+                <nz-option *ngFor="let level of levelFilter" [nzLabel]="level.text"
+                            [nzValue]="level.text"></nz-option>
+              </nz-select>
+            </td>
+            
+            <td>
+              <div class="editable-cell" [hidden]="editId === data.id" (click)="startEdit(data.id)">
+                {{ data.statement }}
+              </div>
+              <input [hidden]="editId !== data.id" type="text" nz-input [(ngModel)]="data.statement" (blur)="stopEdit(data)" />
+            </td>
+            <td>
+               <nz-tag [nzColor]="data.statusColor"
+              >{{ data.status }}
             </nz-tag>
             </td>
             <td> 
               <div nz-row>
                 <div nz-col class="gutter-row" [nzSpan]="18">
-                  <nz-progress (click)="$event.stopPropagation()" [nzShowInfo]="false" [nzStatus]="data.indicator.scoreType" [nzPercent]="data.indicator.score"></nz-progress>
+                  <nz-progress (click)="$event.stopPropagation()" [nzShowInfo]="false" [nzStrokeColor]="data.gradient" [nzPercent]="data.score"></nz-progress>
                 </div>
                 <div nz-col class="score-row" [nzSpan]="6">
-                  {{data.indicator.score}}%
+                  {{data.score}}%
                 </div>
               </div>
             </td>
-            <td (click)="$event.stopPropagation()" class="action">
-              <i nz-icon nzType="edit" class="edit-icon" (click)="$event.stopPropagation();edit(i, index);" nzTheme="fill"></i>
-              <i nz-icon nzType="delete" class="delete-icon" (click)="$event.stopPropagation();showDeleteConfirm(i, index);" nzTheme="fill"></i>
+            <td (click)="$event.stopPropagation()">
+              <!--<i nz-icon nzType="edit" class="edit-icon" (click)="$event.stopPropagation();edit(i, index);" nzTheme="fill"></i>-->
+              <i nz-icon nzType="plus-circle" class="add-icon" (click)="addRow();" nzTheme="fill"></i>
+              <i nz-icon nzType="check-circle" class="check-icon" (click)="validateStatement(index);" nzTheme="fill"></i>
+              <a nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this statement?" (nzOnConfirm)="deleteRow(index)">
+                <i nz-icon nzType="close-circle" class="delete-icon" nzTheme="fill"></i>
+              </a>
+          
             </td>
           </tr>
         </ng-template>
       </tbody>
     </nz-table>
-      <ng-template #extraTpl>
-        <!-- You can use stopPropagation if you don't want the panel to toggle -->
-        <div nz-row>
-          <div nz-col class="collapse-title" [nzSpan]="20">{{panel.name}}</div>
-          <!-- <div nz-col class="gutter-row" [nzSpan]="4"> <nz-progress (click)="$event.stopPropagation()" [nzPercent]="panel.value" [nzStatus]="panel.status"></nz-progress></div> -->
-        </div>
-      </ng-template>
-    </nz-collapse-panel>
-  </nz-collapse>
 </div>
-  <nz-modal
-  [(nzVisible)]="isVisible"
-  nzTitle="Update Statement"
-  nzOkText="Update"
-  nzCancelText="Cancel"
-  (nzOnOk)="update()"
-  (nzOnCancel)="handleCancel()"
->
-<textarea nz-input placeholder="Controlled autosize" [(ngModel)]="editStatement" [nzAutosize]="{ minRows: 3, maxRows: 5 }"></textarea>
-
-</nz-modal>
