--- a/src/app/pages/indicator/result/result.component.scss
+++ b/src/app/pages/indicator/result/result.component.scss
@@ -6,10 +6,15 @@
     font-size: 20px;
     margin-left: 6px;
 }
-.edit-icon{
+.add-icon{
     color:#49345d;
     font-size: 20px;
-     margin-right: 6px;
+    margin-right: 6px;
+}
+.check-icon{
+    color:green;
+    font-size: 20px;
+    margin-right: 6px;
 }
 .action{
     text-align: center;
@@ -27,4 +32,16 @@
 }
 .content-panel {
     min-height:250px;
+}
+
+.editable-cell {
+    position: relative;
+    padding: 5px 12px;
+    cursor: pointer;
+  }
+
+.editable-row:hover .editable-cell {
+    border: 1px solid #d9d9d9;
+    border-radius: 4px;
+    padding: 4px 11px;
 }
