--- a/src/app/pages/indicator/result/result.component.html
+++ b/src/app/pages/indicator/result/result.component.html
@@ -20,13 +20,15 @@
             Statement
           </th>
           <th
-           nzWidth="10%">
+          [nzFilters]="statusFilter"
+          [nzFilterFn]="filterStatus"
+          >
             Status
           </th>
           <th nzWidth="25%">
             Score
           </th>
-          <th nzWidth="12%">
+          <th nzWidth="8%">
             Action
           </th>
         </tr>
@@ -47,7 +49,7 @@
               </nz-select>
             </td>
             
-            <td>
+            <td title="You can edit by selecting the row">
               <div class="editable-cell" [hidden]="editId === data.id" (click)="startEdit(data.id)">
                 {{ data.statement }}
               </div>
